@@ -1,0 +1,79 @@
+package mobac.program.atlascreators;
+
+import java.io.File;
+import java.io.FileOutputStream;
+import java.io.IOException;
+
+import javax.imageio.ImageIO;
+
+import mobac.exceptions.MapCreationException;
+import mobac.mapsources.mapspace.MercatorPower2MapSpace;
+import mobac.program.atlascreators.tileprovider.ConvertedRawTileProvider;
+import mobac.program.interfaces.MapInterface;
+import mobac.program.model.TileImageFormat;
+import mobac.utilities.Utilities;
+import mobac.utilities.tar.TarIndex;
+
+import org.openstreetmap.gui.jmapviewer.interfaces.MapSource;
+
+/**
+ * Derived from {@link MobileTrailExplorer}
+ */
+public class GpsSportsTracker extends AtlasCreator {
+
+	private File mapDir = null;
+
+	protected String appendFileExt = "";
+
+	@Override
+	public boolean testMapSource(MapSource mapSource) {
+		return MercatorPower2MapSpace.INSTANCE_256.equals(mapSource.getMapSpace());
+	}
+
+	@Override
+	public void initializeMap(MapInterface map, TarIndex tarTileIndex) {
+		super.initializeMap(map, tarTileIndex);
+		String mapName = map.getMapSource().getName().replaceAll(" ", "_");
+		mapDir = new File(atlasDir, mapName);
+	}
+
+	public void createMap() throws MapCreationException, InterruptedException {
+		try {
+			Utilities.mkDir(mapDir);
+		} catch (IOException e1) {
+			throw new MapCreationException(e1);
+		}
+		if (!"png".equalsIgnoreCase(mapSource.getTileType()))
+			// If the tile image format is not png we have to convert it
+			mapDlTileProvider = new ConvertedRawTileProvider(mapDlTileProvider, TileImageFormat.PNG);
+		createTiles();
+	}
+
+	protected void createTiles() throws InterruptedException, MapCreationException {
+		atlasProgress.initMapCreation((xMax - xMin + 1) * (yMax - yMin + 1));
+		ImageIO.setUseCache(false);
+
+		for (int x = xMin; x <= xMax; x++) {
+			for (int y = yMin; y <= yMax; y++) {
+				checkUserAbort();
+				atlasProgress.incMapCreationProgress();
+				try {
+					String tileFileName = map.getZoom() + "_ " + x + "_" + y + ".png";
+					byte[] sourceTileData = mapDlTileProvider.getTileData(x, y);
+					if (sourceTileData != null) {
+						File f = new File(mapDir, tileFileName);
+						FileOutputStream out = new FileOutputStream(f);
+						try {
+							out.write(sourceTileData);
+						} finally {
+							Utilities.closeStream(out);
+						}
+					}
+				} catch (IOException e) {
+					throw new MapCreationException("Error writing tile image: " + e.getMessage(), e);
+				}
+			}
+		}
+	}
+
+}
