@@ -35,6 +35,7 @@
  ! Fixed: #3008934 (MM1B calculation problem in .map file)
  + New map source: MyTopo.com (USA only)
  + New map source: Yahoo Maps Japan
+ + New atlas format: GPS Sports Tracker
 
  1.7: (2010-02-05)
  ~ Project has been renamed to "Mobile Atlas Creator" taking account that
